small ui fix on cancel button and spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6348,7 +6348,7 @@ sell-nft-modal {
 .article-reactions {
   width: 100%;
   max-width: 700px;
-  margin: 0 auto;
+  margin: 30px auto 0;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   padding: 0 0 12px 0;
